Fix iframe overflow in small screen

--- a/assets/css/common/profile-mode.css
+++ b/assets/css/common/profile-mode.css
@@ -45,3 +45,10 @@
     font-family: monospace;
     line-height: 1.6;
 }
+
+.venue-iframe{
+    @media (max-width: 768px) {
+        display: flex;
+        width: 400px;
+    }
+}
